--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Lint with golangci-lint
         uses: golangci/golangci-lint-action@v6
-        continue-on-error: true
+        continue-on-error: false
         with:
           version: v1.60
           working-directory: ${{ inputs.workdir }}
