fix: action lint version

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,7 +31,7 @@ jobs:
         uses: golangci/golangci-lint-action@v7
         continue-on-error: false
         with:
-          version: v1.60
+          version: latest
           working-directory: ${{ inputs.workdir }}
           skip-cache: true
           skip-save-cache: true
